@@ -1,3 +1,12 @@
+From cd8ad7f (closure-adv):
+==========================
+
+In prisim/closure.py,
+
+(*) In function npz2hdf5(), check for presence of files 'std_dev_triad',
+'averaged_closures', and 'std_dev_lst' in the input NPZ file before
+reading them and writing to the output HDF5 file.
+
 From 65321a2 (closure-adv):
 ==========================
 
